--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-TOKEN="MTQwNzUyNzAyNDE4NDI2Njg2Mw.GBtT-o.lFVxs9kjhaNCXsxxiFF77GMQrJpKo7DMllMqVY"
+TOKEN="MTQwNzUyNzAyNDE4NDI2Njg2Mw.GY3wz4.d8m0AUmpMeqI-ltaw0r5OfecUCRjj38K5gta1k"
 COMMAND_PREFIX="$"
 
 # Enter your file_name here , with (.db, .sql, .sqlite3) suffix , Example: economy.db
